[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Enemie2.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Timer.gd" type="Script" id=2]
[ext_resource path="res://Assets/SpaceInvader3.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 6.0

[node name="Enemie2" type="Area2D"]
position = Vector2( 289, 17 )
collision_layer = 2147483650
script = ExtResource( 1 )

[node name="Enemie2Muzzle1" type="Position2D" parent="."]
position = Vector2( -2, 10 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="Enemie2Muzzle2" type="Position2D" parent="."]
position = Vector2( 2, 10 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="Enemie2Timer" type="Timer" parent="."]
script = ExtResource( 2 )

[node name="Enemie2Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Enemie1_area_entered"]
[connection signal="timeout" from="Enemie2Timer" to="." method="_on_Timer_timeout"]
